# calcul

./: language.txt  locations.txt  pyproject.toml
src/: calcul.py
src/Calcul.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
