[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Calcul"
version = "0.99"
authors = [
  { name="Kamil Kownacki", email="kamil.kownacki3@gmail.com" },
]
description = "OOP calculator"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gorillq/calcul"
"Bug Tracker" = "https://github.com/Gorillq/calcul/issues"